[package]
name = "idgen_rs"
version = "0.1.3"
authors = ["ntcat <ntcat@qq.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
keywords = ["snowflake", "idgenerator"]
description = "A simple snowflake ID generator from idgen_go"
readme = "README.md"
homepage = "https://github.com/ntcat/idgen_rs"
repository = "https://github.com/ntcat/idgen_rs"
documentation = "https://docs.rs/idgen_rs"


[dependencies]
chrono = "0.4.38"
lazy_static = "1.4.0"

[lib]
name = "idgen_rs"
path = "./src/lib.rs"
crate-type = ["rlib"]
