[package]
name = "idgen_rs"
version = "0.1.6"
authors = ["ntcat <ntcat@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["snowflake", "idgenerator"]
description = "A perfect snowflake ID generator"
readme = "README.md"
homepage = "https://github.com/ntcat/idgen_rs"
repository = "https://github.com/ntcat/idgen_rs"
documentation = "https://docs.rs/idgen_rs"


[dependencies]
chrono = "0.4.38"
lazy_static = "1.5.0"

[lib]
name = "idgen_rs"
path = "./src/lib.rs"
crate-type = ["rlib"]
